# jupyterhealth-exchange

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  TOKEN_EXCHANGE_TMP_README.md  docker-compose.dev.yml  docker-compose.yml  dot_env_example.txt  fhir-r4-import-patches.md  fhir-r4-import.md  login_otp.md  practitioner_clients.md  pyproject.toml  schema.yml
.github/: dependabot.yaml
core/: admin.py  authentication.py  context_processors.py  fhir_mapping.py  forms.py  middleware.py  models.py  oidc_verify.py  ow_client.py  pagination.py  permissions.py  serializers.py  signals.py  urls.py  user_messages.py  utils.py
db/: patch_auth_application_id_20250415.sql  patch_codeableconcept_20250326.sql  patch_codeableconcept_datasource_20250326.sql  seed.sql
deploy/: crontab
doc/: open-wearables-integration.md  troubleshooting-local-dev.md
docs/: data-model-erd.md  seed-data.md
jhe/: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  Pipfile  dot_env_example.txt  env_example.txt  fhir_config.json  fly.toml  fly_example.toml  manage.py  requirements.txt  runtests.py  schema.yml  settings.py  test_settings.py  urls.py
mcp_server/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
mcp_server/src/jhe_mcp/: audit.py  config.py  core.py  omh_registry.py  server_http.py  server_stdio.py
mcp_server/src/jhe_mcp/auth/: broker.py  broker_state.py  context.py  oauth_flow.py  pkce.py  token_cache.py  token_verifier.py  userinfo.py
mcp_server/src/jhe_mcp/fhir/: client.py  models.py  observation_query.py
mcp_server/src/jhe_mcp/schemas/: schema-omh_body-temperature_4-0.json  schema-omh_rr-interval_1-0.json
mcp_server/src/jhe_mcp/tools/: observation_counts.py  observation_views.py  study.py
mcp_server/tests/: conftest.py
mcp_server/tests/integration/: conftest.py  test_http_tools.py  test_stdio_tools.py
mcp_server/tests/unit/: test_auth_context.py  test_auth_flow.py  test_broker_endpoints.py  test_broker_state.py  test_config.py  test_core_registration.py  test_fhir_client.py  test_fhir_models.py  test_oauth_flow.py  test_observation_counts.py  test_observation_query.py  test_observation_views.py  test_omh_registry.py  test_pkce.py  test_session_isolation.py  test_slim_observation.py  test_smoke.py  test_token_cache.py  test_token_verifier.py  test_tools_study.py  test_userinfo.py
patient-frontend/: package-lock.json  package.json  (+1 more)
(+613 files in other folders)
